--- a/TestFlurry/Info.plist
+++ b/TestFlurry/Info.plist
@@ -21,5 +21,9 @@
 			</array>
 		</dict>
 	</dict>
+    <key>NSUserTrackingUsageDescription</key>
+    <string>This identifier will be used to deliver personalized ads to you.</string>
+    <key>UIUserInterfaceStyle</key>
+    <string>Dark</string>
 </dict>
 </plist>
